# ngfw_pkgs

./: .gitignore  .travis.yml  Dockerfile.bullseye-current  Jenkinsfile  Jenkinsfile.subtrees  README  README.md  RELEASE_CHECKLIST  build-order.txt  build-travis.sh  docker-compose-ngfw-ui-build.yml  docker-compose.build.yml  lint.sh  schema.json  setup.cfg  setup.py  subtrees.yaml  sync-settings  untangle-hardware-turris-omnia_13.0.0.20170119T172930+0100.73651b1-1jessie_amd64.build  untangle-netd_1.0.0-1_all.deb  update-subtrees.py  vue-ui-build-push.sh
.travis/: buildbot.rsa.enc
activation-server/cgi/: db.rb  get-license-key.rb  list-all-keys.rb  sshkey.rb  utils.rb
bootsplash-mv/: Makefile
bootsplash-mv/debian/: bootsplash-mv.dirs  changelog  control  rules
bootsplash-ut/debian/: bootsplash-ut.dirs  control  rules  untangle-bootsplash.dirs
clamav-mv/: Makefile
clamav-mv/debian/: changelog  clamav-mv.postinst  control  (+1 more)
debian/: changelog  control  postinst
dev-env-mv/: Makefile
dev-mv/: Makefile
diffserver/: apache.conf  diffserver.rb
disabler/: Makefile
fakekdm-mv/: Makefile
firefox-r-kiosk/: Makefile
fprot-mv/: Makefile
fuzzyocr-mv/: FuzzyOcr.cf  INSTALL  Makefile
fuzzyocr-ut/: FAQ  Makefile
gocr/: BUGS  INSTALL  Makefile  README  READMEde.txt  gocr.spec
gocr/api/: Changelog  Makefile.am  README  STATUS  TODO  libtool
gocr/api/doc/: api.doxygen  api.txt  developers.txt
gocr/api/include/: Makefile.am  gocr_char.h  gocr_gui.h  gocr_image.h  gocr_module.h  hash.h
gocr/api/libltdl/: libtool
gocr/api/src/: _gocr.h  block.c  hash.c  list.c  pixel.c
gocr/api/tests/: Makefile.am  image.c  module.c
gocr/frontend/gnome/: configure  configure.in  mkinstalldirs
gocr/frontend/gnome/src/: common.h  config.h  configure.in  functions.c  mkinstalldirs
iptables-mv/: README
jabsorb-1.2.2/: build.xml
kiosk-mv/: Makefile
libnet-ssh-ruby/: ._NEWS  ._THANKS  ._net-ssh.gemspec  net-ssh.gemspec
libnetfilter-queue/: Makefile.in  acinclude.m4
libnetfilter_queue-0.0.12/: aclocal.m4  configure
libnfnetlink/: Makefile.in  configure
libnfnetlink-0.0.16/: Makefile.am  configure.in
libnfnetlink-0.0.16/debian/: changelog
libnfnetlink-0.0.16/include/: Makefile.in
libnfnetlink-0.0.16/include/libnfnetlink/: Makefile.in  linux_nfnetlink.h
libnfnetlink-0.0.16/src/: Makefile.am
mdadm-2.6.7.1/: Makefile  RAID5_versus_RAID10.txt  ReadMe.c  davidpashley.com_blog_2008_07_12#rebuilding-raid.html  mdadm.8  mdadm.conf.5  mdassemble.8  rootraiddoc.97.html
nsis-mv/: Makefile  Readme
postgresql-mv/: Makefile
postgresql-mv-8.1/: Makefile
properJavaRDP/: Makefile  build-common.xml  build-eg.xml  gpl.txt  readme.txt
pump-mv/: Makefile  pump-mv.postinst
rbot-mv/: Makefile
restore-mv/: Makefile  backup-mv  edgeguard-restore  edgeguard-restore.sh  factory-defaults  mvvmdb  mvvmdb-restore  restore-mv
runtests/: __init__.py  remote_control.py
scripts/: Makefile  Makefile.in  clean-packages.rb  clean-packages.sh  clean_packages.sh  deb-add.sh  deb-scan-release.sh  deb-scan-trial.sh  deb-scan.sh  findAllDeps.py  incVersion.sh  incoming-queue.rb  incoming-queue.sh  override.testing.metavize  push-release-alpha.sh  push-release-beta-cd.sh  push-release-beta.sh  push-release.sh  push-release2.sh  push-trial.sh  push.sh
slapd-mv/: Makefile
source/: .prettierrc  babel.config.js  build-ngfw-components.sh  package-lock.json  package.json  vue.config.js
spamassassin-3.1.7/: sa-update.raw
spamc-mv/: Makefile
storeitem/: Makefile
sync/: __init__.py  board_util.py  iptables_util.py  manager.py  managers.py  network_util.py  nftables_util.py  registrar.py  services.py  settings_file.py  uri_util.py  variables.py  version.py  vlan_util.py
tests/: test_nftables.py
untangle-apache2-config/: Makefile  adminindex.py  errorindex.py  login.py  untangle-unrestricted-apps  uvm.config  uvmlogin.py  workers.properties
untangle-barfight/: Makefile
untangle-clamav-config/: update_sanesecurity.sh
untangle-cpd/: Makefile  README  untangle-cpd
untangle-development-build/: Makefile
untangle-fprot/: untangle-update.sh
untangle-fuzzyocr/: FuzzyOcr.cf  FuzzyOcr.pm  FuzzyOcr.words.sample
untangle-gocr/: HISTORY  Makefile  Makefile.in  TODO  configure  configure.in  make.bat
untangle-gocr/api/: configure.in  install-sh  libtool  ltconfig  mkinstalldirs
untangle-gocr/api/doc/: Makefile.am  api.lyx  api.tex
untangle-gocr/api/include/: config.h.in  gocr.h  gocr_block.h  gocr_list.h  unicode.h
untangle-gocr/api/libltdl/: config.h.in  libtool
untangle-gocr/api/src/: Makefile.am  find.c  gui.c  image.c  init.c  modules.c  print.c  recog.c  text.c  unicode.c
untangle-gocr/api/tests/: charfind.c  imagewrite.c
untangle-iptables/: Makefile
untangle-libdaemons-ruby/: ._Releases
untangle-libnet-ssh-ruby/: ChangeLog  NEWS  Rakefile  TODO
untangle-libnetfilter-conntrack/: Makefile.in  aclocal.m4  configure  configure.in  depcomp  install-sh  missing
untangle-libnetfilter-queue/: ChangeLog  Makefile.am  Makefile.in  configure  configure.in  libnetfilter-queue-0.0.12.tar.bz2  libnetfilter-queue-0.0.12.tar.bz2.cdbs-config_list  libnetfilter-queue-0.0.15.tar.bz2
untangle-libnfnetlink/: Makefile.in
untangle-libpamauth-ruby1.8/: extconf.rb  pam_auth.c
untangle-netd/: iptables.txt
untangle-nflogd/: Makefile
untangle-nsis-addons/: nsis206.tar.bz2
untangle-python-runtests/: .gitignore  setup.py
untangle-python-support-diagnostics/: .gitignore  Jenkinsfile  README.md  install.sh
untangle-python-sync-settings/: .coveragerc  .gitignore  Jenkinsfile  README.md  lint.sh  setup.py
untangle-rails/: fix-ruby-path  rails
untangle-restore-tools/: factory-defaults  mvvmdb-restore  untangle-restore  ut-restore  uvmdb-restore
untangle-ruby-pamauth/: Makefile
untangle-shield/: Makefile
untangle-snort-config/: package-snortrules
untangle-spamassassin/: README  UPGRADE  USAGE  sa-learn.raw  sa-update.raw
untangle-support-keyring/: Makefile
untangle-ujac2pdf/: ujac.diff
untangle-update-manager/: versions.rb
untangle-vue-ui/: Makefile
(+4567 files in other folders)
