dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/common.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AM_INIT_AUTOMAKE(gtk-ocr,0.1)


dnl Checks for libraries.
dnl Replace `main' with a function in -libs:

dnl Checks for header files.
AC_HEADER_STDC

GTK_CFLAGS="gtk-config --cflags"
GTK_LIBS="gtk-config --libs"

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_CONFIG_SUBDIRS(src)
dnl Checks for library functions.

AC_OUTPUT(src/Makefile Makefile)
