dnl Process this file with autoconf to produce a configure script.
AC_INIT(common.h)

AM_INIT_AUTOMAKE(gtk-ocr,0.1)dnl

AM_CONFIG_HEADER(config.h)dnl

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
dnl Replace `main' with a function in -libs:
AM_PATH_GTK(1.2.8,,AC_MSG_ERROR(Sorry you need gtk 1.2.8))dnl

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile)
